src/test/deca/syntax/valid/resultats/test21_zero-lex.res
'{': [@0,238:238='{',<36>,14:0]
'println': [@1,241:247='println',<18>,15:1]
'(': [@2,248:248='(',<34>,15:8]
FLOAT: [@3,249:263='0.01E-999999999',<46>,15:9]
')': [@4,264:264=')',<35>,15:24]
';': [@5,265:265=';',<39>,15:25]
'}': [@6,267:267='}',<37>,16:0]
