src/test/deca/syntax/invalid/resultats/test10_float-lex.res
'{': [@0,349:349='{',<36>,15:0]
'print': [@1,352:356='print',<17>,16:1]
'(': [@2,357:357='(',<34>,16:6]
FLOAT: [@3,358:361='12.0',<46>,16:7]
IDENT: [@4,362:362='e',<26>,16:11]
')': [@5,363:363=')',<35>,16:12]
';': [@6,364:364=';',<39>,16:13]
'}': [@7,366:366='}',<37>,17:0]
